--- a/Project1/Project1.WebApp/Views/Shared/_Layout.cshtml
+++ b/Project1/Project1.WebApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Customers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Store" asp-action="Index">Stores</a>
+                        </li>
                     </ul>
                 </div>
             </div>
