--- a/Project1/Project1.WebApp/Views/Shared/_Layout.cshtml
+++ b/Project1/Project1.WebApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewData["Title"] - Store WebApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        body {
+            background-color: gray
+        }
+    </style>
 </head>
 <body>
     <header>
