--- a/Project1/Project1.WebApp/Views/Customer/Create.cshtml
+++ b/Project1/Project1.WebApp/Views/Customer/Create.cshtml
@@ -3,7 +3,11 @@
 @{
     ViewData["Title"] = "New Customer";
 }
-
+<style>
+    body {
+        background-color: gray
+    }
+</style>
 <h1>@ViewData["Title"]</h1>
 
 <div class="row">
